--- a/Landing.html
+++ b/Landing.html
@@ -17,7 +17,7 @@
                     <li><a href="#">Support</a></li>
                     <li><a href="#">About us</a></li>
                 </ul>
-                <button>Start here</button>
+                <a href="./Signup.html">Start here</a>
             </nav>
         </header>
         <section>
