--- a/Signup.html
+++ b/Signup.html
@@ -14,7 +14,11 @@
         </header>
         <section>
             <form action="#" method="POST">
-                <h3>Let us know you better.</h3>
+                <div>
+                    <h3>Let us know you better.</h3>
+                    <a href="./Login.html">have a account already</a>
+                </div>
+
                 <label>How do your firends call you?</label>
                 <br>
                 <input type="text" placeholder="first name">
