add play buttons

--- a/PlayList.html
+++ b/PlayList.html
@@ -25,6 +25,12 @@
           </a>
         </li>
       </ul>
+
+      <div>
+        <button>previous</button>
+        <button>play</button>
+        <button>next</button>
+      </div>
     </main>
 
     <footer></footer>
