--- a/SongsList.html
+++ b/SongsList.html
@@ -36,6 +36,8 @@
             <span>4.8</span>
             <span>5:24</span>
             <span>356 view</span>
+
+            <button>add to playlist</button>
           </a>
         </li>
       </ul>
