add play list link to footer and navbar

--- a/Landing.html
+++ b/Landing.html
@@ -13,7 +13,7 @@
             <nav>
                 <ul>
                     <li><a href="#">Home</a></li>
-                    <li><a href="#">Songs</a></li>
+                    <li><a href="#">Play List</a></li>
                     <li><a href="#">Support</a></li>
                     <li><a href="#">About us</a></li>
                 </ul>
@@ -33,7 +33,7 @@
                     <nav>
                         <ul>
                             <li><a href="#">Home</a></li>
-                            <li><a href="#">Songs</a></li>
+                            <li><a href="#">Play List</a></li>
                             <li><a href="#">Support</a></li>
                             <li><a href="#">About us</a></li>
                         </ul>
