added navbar and footer

--- a/Landing.html
+++ b/Landing.html
@@ -13,7 +13,8 @@
             <nav>
                 <ul>
                     <li><a href="#">Home</a></li>
-                    <li><a href="#">Play List</a></li>
+                    <li><a href="./PlayList.html">Play List</a></li>
+                    <li><a href="./SongsList.html">Song</a></li>
                     <li><a href="#">Support</a></li>
                     <li><a href="#">About us</a></li>
                 </ul>
@@ -33,7 +34,8 @@
                     <nav>
                         <ul>
                             <li><a href="#">Home</a></li>
-                            <li><a href="#">Play List</a></li>
+                            <li><a href="./PlayList.html">Play List</a></li>
+                            <li><a href="./SongsList.html">Song</a></li>
                             <li><a href="#">Support</a></li>
                             <li><a href="#">About us</a></li>
                         </ul>
