--- a/SongsList.html
+++ b/SongsList.html
@@ -5,9 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Songs List</title>
+    <script src="https://kit.fontawesome.com/352dbc4ea4.js" crossorigin="anonymous"></script>
   </head>
   <body>
-    <nav></nav>
+    <nav>
+      <ul>
+        <li><a href="./Landing.html">Home</a></li>
+        <li><a href="./PlayList.html">Play List</a></li>
+        <li><a href="#">Song</a></li>
+        <li><a href="#">Support</a></li>
+        <li><a href="#">About us</a></li>
+      </ul>
+      <a href="./Signup.html">Start here</a>
+    </nav>
 
     <form>
       <input type="search" name="song" id="song" />
@@ -37,12 +47,36 @@
             <span>5:24</span>
             <span>356 view</span>
 
-            <button>add to playlist</button>
+            <button title="add to playlist"><i class="fas fa-plus"></i></button>
           </a>
         </li>
       </ul>
     </main>
 
-    <footer></footer>
+    <footer>
+      <section>
+        <img src="./asset/img/logo_song_guy.png" alt="logo">
+      </section>
+      <section>
+        <nav>
+          <ul>
+            <li><a href="./Landing.html">Home</a></li>
+            <li><a href="./PlayList.html">Play List</a></li>
+            <li><a href="#">Song</a></li>
+            <li><a href="#">Support</a></li>
+            <li><a href="#">About us</a></li>
+          </ul>
+        </nav>
+      </section>
+      <section>
+        <nav>
+          <ul>
+            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+            <li><a href="#"><i class="fab fa-facebook-square"></i></a></li>
+            <li><a href="#"><i class="fab fa-youtube"></i></a></li>
+          </ul>
+        </nav>
+      </section>
+    </footer>
   </body>
 </html>
