add input to login page

--- a/src/login.html
+++ b/src/login.html
@@ -15,6 +15,25 @@
         <h1 class="form__title">ورود</h1>
         <h3 class="form__subtitle">گذرگاه سرزمین رویا</h3>
 
+        <div class="form__field">
+          <input id="email" type="email" class="form__field__input" autocomplete="email" />
+          <label
+            for="email"
+            class="form__field__label form__field__label--inline"
+          > ایمیل
+          </label>
+          <span class="form__field__status"></span>
+        </div>
+
+        <div class="form__field">
+          <input id="password" type="password" class="form__field__input" autocomplete="current-password" />
+          <label
+            for="password"
+            class="form__field__label form__field__label--inline"
+          > کلمه عبور
+          </label>
+          <span class="form__field__status"></span>
+        </div>
       </form>
     </main>
   </body>
