create style for button

--- a/src/login.html
+++ b/src/login.html
@@ -34,6 +34,10 @@
           </label>
           <span class="form__field__status"></span>
         </div>
+
+        <a href="/signup" class="button--inline">ثبت نام</a>
+        <a href="/forgot-password" class="button--inline">فراموشی کلمه عبور</a>
+        <button type="submit" class="button">ورود</button>
       </form>
     </main>
   </body>
