--- a/src/login.html
+++ b/src/login.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ورود | آهنگیفای</title>
-    <link rel="stylesheet" href="../style/css/main.css"></link>
-    <link rel="stylesheet" href="../style/css/login.css"></link>
-    <link rel="stylesheet" href="../style/css/form.css"></link>
-    <link rel="stylesheet" href="../style/css/button.css"></link>
+    <link rel="stylesheet" href="./style/css/main.css"></link>
+    <link rel="stylesheet" href="./style/css/login.css"></link>
+    <link rel="stylesheet" href="./style/css/form.css"></link>
+    <link rel="stylesheet" href="./style/css/button.css"></link>
   </head>
   <body>
     <main class="form__box">
@@ -35,8 +35,8 @@
           <span class="form__field__status"></span>
         </div>
 
-        <a href="/signup" class="button--inline">ثبت نام</a>
-        <a href="/forgot-password" class="button--inline">فراموشی کلمه عبور</a>
+        <a href="./sign-up.html" class="button--inline">ثبت نام</a>
+        <a href="./forgot-password.html" class="button--inline">فراموشی کلمه عبور</a>
         <button type="submit" class="button">ورود</button>
       </form>
     </main>
