adding icon to tile pages

--- a/src/sign-up.html
+++ b/src/sign-up.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./style/css/login.css"></link>
     <link rel="stylesheet" href="./style/css/form.css"></link>
     <link rel="stylesheet" href="./style/css/button.css"></link>
+    <link rel="icon" href="./assets/image/logo-ahangify.png">
   </head>
   <body>
     <main class="form__box">
@@ -45,7 +46,7 @@
             <span class="form__field__status"></span>
           </div>
 
-        <a href="./login.html" class="button--inline">اکانت دارم...</a>
+        <a href="./login.html" class="button--inline">قبلا ثبت نام کردم...</a>
         <button type="submit" class="button">ثبت نام</button>
       </form>
     </main>
