--- a/src/login.html
+++ b/src/login.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./style/css/login.css"></link>
     <link rel="stylesheet" href="./style/css/form.css"></link>
     <link rel="stylesheet" href="./style/css/button.css"></link>
+    <link rel="icon" href="./assets/image/logo-ahangify.png">
   </head>
   <body>
     <main class="form__box">
