move htmls to page folders

--- a/src/pages/sign-up.html
+++ b/src/pages/sign-up.html
@@ -3,17 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ورود | آهنگیفای</title>
-    <link rel="stylesheet" href="./style/css/main.css"></link>
-    <link rel="stylesheet" href="./style/css/login.css"></link>
-    <link rel="stylesheet" href="./style/css/form.css"></link>
-    <link rel="stylesheet" href="./style/css/button.css"></link>
-    <link rel="icon" href="./assets/image/logo-ahangify.png">
+    <title>ثبت نام | آهنگیفای</title>
+    <link rel="stylesheet" href="../style/css/main.css"></link>
+    <link rel="stylesheet" href="../style/css/login.css"></link>
+    <link rel="stylesheet" href="../style/css/form.css"></link>
+    <link rel="stylesheet" href="../style/css/button.css"></link>
+    <link rel="icon" href="../assets/image/logo-ahangify.png">
   </head>
   <body>
     <main class="form__box">
       <form class="form">
-        <h1 class="form__title">ورود</h1>
+        <h1 class="form__title">ثبت نام</h1>
         <h3 class="form__subtitle">گذرگاه سرزمین رویا</h3>
 
         <div class="form__field">
@@ -36,9 +36,18 @@
           <span class="form__field__status"></span>
         </div>
 
-        <a href="./sign-up.html" class="button--inline">ثبت نام</a>
-        <a href="./forgot-password.html" class="button--inline">فراموشی کلمه عبور</a>
-        <button type="submit" class="button">ورود</button>
+        <div class="form__field">
+            <input id="password" type="password" class="form__field__input" autocomplete="current-password" />
+            <label
+              for="password"
+              class="form__field__label form__field__label--inline"
+            > تکرار کلمه عبور
+            </label>
+            <span class="form__field__status"></span>
+          </div>
+
+        <a href="./login.html" class="button--inline">قبلا ثبت نام کردم...</a>
+        <button type="submit" class="button">ثبت نام</button>
       </form>
     </main>
   </body>
