--- a/src/pages/landing.html
+++ b/src/pages/landing.html
@@ -6,22 +6,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>آهنگیفای | دنیای خیال</title>
-    <link rel="stylesheet" href="./style/css/header.css">
-    <link rel="stylesheet" href="./style/css/landing.css">
-    <link rel="stylesheet" href="./style/css/footer.css">
-    <link rel="icon" href="./assets/image/logo-ahangify.png">
+    <link rel="stylesheet" href="../style/css/header.css">
+    <link rel="stylesheet" href="../style/css/landing.css">
+    <link rel="stylesheet" href="../style/css/footer.css">
+    <link rel="icon" href="../assets/image/logo-ahangify.png">
 </head>
 
 <body>
     <header class="header">
         <div class="header__link__box">
             <button class="header__collapse_btn"><?xml version="1.0" encoding="utf-8"?><svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 122.88 95.95" style="enable-background:new 0 0 122.88 95.95" xml:space="preserve"><style type="text/css">.st0{fill-rule:evenodd;clip-rule:evenodd;}</style><g><path class="st0" d="M8.94,0h105c4.92,0,8.94,4.02,8.94,8.94l0,0c0,4.92-4.02,8.94-8.94,8.94h-105C4.02,17.88,0,13.86,0,8.94l0,0 C0,4.02,4.02,0,8.94,0L8.94,0z M8.94,78.07h105c4.92,0,8.94,4.02,8.94,8.94l0,0c0,4.92-4.02,8.94-8.94,8.94h-105 C4.02,95.95,0,91.93,0,87.01l0,0C0,82.09,4.02,78.07,8.94,78.07L8.94,78.07z M8.94,39.03h105c4.92,0,8.94,4.02,8.94,8.94l0,0 c0,4.92-4.02,8.94-8.94,8.94h-105C4.02,56.91,0,52.89,0,47.97l0,0C0,43.06,4.02,39.03,8.94,39.03L8.94,39.03z"/></g></svg></button>
-            <a class="header__link__start_now" href="sign-up.html">شروع کنیم</a>
-            <a class="header__link" href="login.html">ورود</a>
-            <a class="header__link" href="song-list.html">لیست آهنگ ها</a>
-            <a class="header__link" href="play-list.html">علاقه مندی ها</a>
+            <a class="header__link__start_now" href="./sign-up.html">شروع کنیم</a>
+            <a class="header__link" href="./login.html">ورود</a>
+            <a class="header__link" href="./song-list.html">لیست آهنگ ها</a>
+            <a class="header__link" href="./play-list.html">علاقه مندی ها</a>
         </div>
-        <a href="./landing.html" class="header__logo__link"><img class="header__logo"
+        <div href="./landing.html" class="header__logo__link"><img class="header__logo"
                 src="./assets/image/logo-ahangify.png" alt="logo"></a>
     </header>
     <main class="main">
@@ -37,10 +37,10 @@
             <a href="http://facebook.com"><?xml version="1.0"?><svg fill="#000000" xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 50 50" width="50px" height="50px">    <path d="M41,4H9C6.24,4,4,6.24,4,9v32c0,2.76,2.24,5,5,5h32c2.76,0,5-2.24,5-5V9C46,6.24,43.76,4,41,4z M37,19h-2c-2.14,0-3,0.5-3,2 v3h5l-1,5h-4v15h-5V29h-4v-5h4v-3c0-4,2-7,6-7c2.9,0,4,1,4,1V19z"/></svg></a>
         </section>
         <section class="footer__section_link">            
-            <a class="footer__link" href="sign-up.html">ثبت نام</a>
-            <a class="footer__link" href="login.html">ورود</a>
-            <a class="footer__link" href="song-list.html">لیست آهنگ ها</a>
-            <a class="footer__link" href="play-list.html">علاقه مندی ها</a>
+            <a class="footer__link" href="./sign-up.html">ثبت نام</a>
+            <a class="footer__link" href="./login.html">ورود</a>
+            <a class="footer__link" href="./song-list.html">لیست آهنگ ها</a>
+            <a class="footer__link" href="./play-list.html">علاقه مندی ها</a>
         </section>
         <section class="footer__section_logo"><a href="./landing.html"><img src="./assets/image/logo-ahangify.png" alt="logo" loading="lazy"></a></section>
     </footer>
