fix bug in landing

--- a/src/pages/landing.html
+++ b/src/pages/landing.html
@@ -15,14 +15,22 @@
 <body>
     <header class="header">
         <div class="header__link__box">
-            <button class="header__collapse_btn"><?xml version="1.0" encoding="utf-8"?><svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 122.88 95.95" style="enable-background:new 0 0 122.88 95.95" xml:space="preserve"><style type="text/css">.st0{fill-rule:evenodd;clip-rule:evenodd;}</style><g><path class="st0" d="M8.94,0h105c4.92,0,8.94,4.02,8.94,8.94l0,0c0,4.92-4.02,8.94-8.94,8.94h-105C4.02,17.88,0,13.86,0,8.94l0,0 C0,4.02,4.02,0,8.94,0L8.94,0z M8.94,78.07h105c4.92,0,8.94,4.02,8.94,8.94l0,0c0,4.92-4.02,8.94-8.94,8.94h-105 C4.02,95.95,0,91.93,0,87.01l0,0C0,82.09,4.02,78.07,8.94,78.07L8.94,78.07z M8.94,39.03h105c4.92,0,8.94,4.02,8.94,8.94l0,0 c0,4.92-4.02,8.94-8.94,8.94h-105C4.02,56.91,0,52.89,0,47.97l0,0C0,43.06,4.02,39.03,8.94,39.03L8.94,39.03z"/></g></svg></button>
-            <a class="header__link__start_now" href="./sign-up.html">شروع کنیم</a>
+            <a class="header__link--start_now" href="./sign-up.html">شروع کنیم</a>
             <a class="header__link" href="./login.html">ورود</a>
             <a class="header__link" href="./song-list.html">لیست آهنگ ها</a>
             <a class="header__link" href="./play-list.html">علاقه مندی ها</a>
         </div>
+        <input type="checkbox" name="toggle_name" id="toggle_menu">
+        <button class="header__collapse_btn"><label for="toggle_menu" class="toggle_menu"><div></div></label></button>
+        <div class="header__link__background--menu"></div>
+        <div class="header__link__box--menu">
+            <a class="header__link--menu" href="./sign-up.html">از اینجا شروع کن</a>
+            <a class="header__link--menu" href="./login.html">ورود</a>
+            <a class="header__link--menu" href="./song-list.html">لیست آهنگ ها</a>
+            <a class="header__link--menu" href="./play-list.html">علاقه مندی ها</a>
+        </div>
         <div href="./landing.html" class="header__logo__link"><img class="header__logo"
-                src="./assets/image/logo-ahangify.png" alt="logo"></a>
+                src="../assets/image/logo-ahangify.png" alt="logo"></a>
     </header>
     <main class="main">
         <section class="main__section_balloon">
@@ -42,7 +50,7 @@
             <a class="footer__link" href="./song-list.html">لیست آهنگ ها</a>
             <a class="footer__link" href="./play-list.html">علاقه مندی ها</a>
         </section>
-        <section class="footer__section_logo"><a href="./landing.html"><img src="./assets/image/logo-ahangify.png" alt="logo" loading="lazy"></a></section>
+        <section class="footer__section_logo"><a href="./landing.html"><img src="../assets/image/logo-ahangify.png" alt="logo" loading="lazy"></a></section>
     </footer>
 
 
