--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>دنیای خیال | آهنگیفای</title>
     <link rel="stylesheet" href="../style/css/main.css" />
-    <link rel="stylesheet" href="../style/css/nav.css" />
-    <link rel="stylesheet" href="../style/css/header.css" />
-    <link rel="stylesheet" href="../style/css/footer.css" />
-    <link rel="stylesheet" href="../style/css/button.css" />
+    <link rel="stylesheet" href="../style/css/components/nav.css" />
+    <link rel="stylesheet" href="../style/css/components/header.css" />
+    <link rel="stylesheet" href="../style/css/components/footer.css" />
+    <link rel="stylesheet" href="../style/css/components/button.css" />
     <link rel="icon" href="../assets/image/favicon.png" />
   </head>
   <body>
