--- a/src/pages/sign-up.html
+++ b/src/pages/sign-up.html
@@ -5,9 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ثبت نام | آهنگیفای</title>
     <link rel="stylesheet" href="../style/css/main.css"></link>
-    <link rel="stylesheet" href="../style/css/login.css"></link>
     <link rel="stylesheet" href="../style/css/form.css"></link>
-    <link rel="stylesheet" href="../style/css/button.css"></link>
+    <link rel="stylesheet" href="../style/css/components/button.css"></link>
     <link rel="icon" href="../assets/image/logo-ahangify.png">
   </head>
   <body>
