fix selecting 2 tab

--- a/src/pages/song.html
+++ b/src/pages/song.html
@@ -79,9 +79,9 @@
         </div>
         </button>
       </section>
-      <input type="checkbox" id="suggestion">
+      <input type="radio" name="fieldset" id="suggestion">
       <label for="suggestion" class="song__options--suggestion">آهنگ های پیشنهادی</label>
-      <input type="checkbox" id="lyrics">
+      <input type="radio" name="fieldset" id="lyrics">
       <label for="lyrics" class="song__options--lyrics">متن آهنگ</label>
       <div class="line"></div>
       <p class="song__lyrics">
@@ -98,7 +98,6 @@
         نیست ازم قطره های آخره خاك تشنه همینم داره همراش میبره خشک میشم تموم
         میشم فردا که خورشید میاد شن جامو پر میکنه که میاره دست باد
       </p>
-
       <section class="song__suggestion">
         <h1>آهنگ های پیشنهادی</h1>
 
