--- a/src/pages/song.html
+++ b/src/pages/song.html
@@ -39,16 +39,16 @@
     <div class="nav__menu__background"></div>
     <ul class="nav__menu">
       <li>
-        <a class="nav__menu__link" href="./sign-up.html">شروع کنیم</a>
+        <a class="nav__link button--inline" href="./sign-up.html">ثبت نام</a>
       </li>
       <li>
-        <a class="nav__menu__link" href="./login.html">ورود</a>
+        <a class="nav__link button--inline" href="./login.html">ورود</a>
       </li>
       <li>
-        <a class="nav__menu__link" href="./song-list.html">آهنگ ها</a>
+        <a class="nav__link button--inline" href="./song-list.html">آهنگ ها</a>
       </li>
       <li>
-        <a class="nav__menu__link" href="./play-list">علاقه مندی ها</a>
+        <a class="nav__link button--inline" href="./play-list">علاقه مندی ها</a>
       </li>
     </ul>
   </nav>
@@ -175,7 +175,7 @@
       <a class="button--inline" href="./play-list.html">علاقه مندی ها</a>
     </div>
 
-    <a href="./index.html">
+    <a href="./">
       <img src="../assets/image/favicon.png" alt="" loading="lazy" />
     </a>
   </footer>
