add sections to index.html

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>دنیای خیال | آهنگیفای</title>
     <link rel="stylesheet" href="../style/css/main.css" />
+    <link rel="stylesheet" href="../style/css/landing.css" />
     <link rel="stylesheet" href="../style/css/components/nav.css" />
     <link rel="stylesheet" href="../style/css/components/header.css" />
     <link rel="stylesheet" href="../style/css/components/footer.css" />
@@ -17,16 +18,22 @@
       <nav class="nav">
         <ul class="nav__link__box">
           <li>
-            <a class="nav__link button--inline" href="./sign-up.html">ثبت نام</a>
+            <a class="nav__link button--inline" href="./sign-up.html">
+              ثبت نام
+            </a>
           </li>
           <li>
-            <a class="nav__link button--inline" href="./login.html">ورود</a>
+            <a class="nav__link button--inline" href="./login.html"> ورود </a>
           </li>
           <li>
-            <a class="nav__link button--inline" href="./song-list.html">آهنگ ها</a>
+            <a class="nav__link button--inline" href="./song-list.html">
+              آهنگ ها
+            </a>
           </li>
           <li>
-            <a class="nav__link button--inline" href="./play-list">علاقه مندی ها</a>
+            <a class="nav__link button--inline" href="./play-list">
+              علاقه مندی ها
+            </a>
           </li>
         </ul>
 
@@ -38,16 +45,22 @@
         <div class="nav__menu__background"></div>
         <ul class="nav__menu">
           <li>
-            <a class="nav__link button--inline" href="./sign-up.html">ثبت نام</a>
+            <a class="nav__link button--inline" href="./sign-up.html">
+              ثبت نام
+            </a>
           </li>
           <li>
             <a class="nav__link button--inline" href="./login.html">ورود</a>
           </li>
           <li>
-            <a class="nav__link button--inline" href="./song-list.html">آهنگ ها</a>
+            <a class="nav__link button--inline" href="./song-list.html">
+              آهنگ ها
+            </a>
           </li>
           <li>
-            <a class="nav__link button--inline" href="./play-list">علاقه مندی ها</a>
+            <a class="nav__link button--inline" href="./play-list">
+              علاقه مندی ها
+            </a>
           </li>
         </ul>
       </nav>
@@ -70,6 +83,28 @@
         </div>
       </div>
     </header>
+
+    <main>
+      <section class="section">
+        <h2 class="section__title">دنیایی از آهنگ ها</h2>
+        <p class="section__text">
+          با آهنگیفای به دنیایی از آهنگ های جذاب دسترسی داشته باشید
+        </p>
+        <svg class="section__image">
+          <use xlink:href="../assets/image/sprite.svg#music" />
+        </svg>
+      </section>
+
+      <section class="section">
+        <h2 class="section__title">آهنگ های خاطره انگیز</h2>
+        <p class="section__text">
+          با آهنگیفای آهنگ های قدیمی و خاطره انگیز خود را دوباره گوش دهید
+        </p>
+        <svg class="section__image">
+          <use xlink:href="../assets/image/sprite.svg#gramophone" />
+        </svg>
+      </section>
+    </main>
 
     <footer class="footer">
       <div class="footer__social">
