bug fix sign-up centering form vertically autocomplete password inline button underline

--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -16,7 +16,7 @@
         <h3 class="form__subtitle">گذرگاه سرزمین رویا</h3>
 
         <div class="form__field">
-          <input id="email" type="email" class="form__field__input" autocomplete="email" />
+          <input id="email" type="email" class="form__field__input" autocomplete="username" />
           <label
             for="email"
             class="form__field__label form__field__label--inline"
