--- a/src/pages/sign-up.html
+++ b/src/pages/sign-up.html
@@ -26,7 +26,7 @@
         </div>
 
         <div class="form__field">
-          <input id="password" type="password" class="form__field__input" autocomplete="current-password" />
+          <input id="password" type="password" class="form__field__input" autocomplete="new-password" />
           <label
             for="password"
             class="form__field__label form__field__label--inline"
@@ -36,9 +36,9 @@
         </div>
 
         <div class="form__field">
-            <input id="password" type="password" class="form__field__input" autocomplete="current-password" />
+            <input id="repeat-password" type="password" class="form__field__input" autocomplete="new-password" />
             <label
-              for="password"
+              for="repeat-password"
               class="form__field__label form__field__label--inline"
             > تکرار کلمه عبور
             </label>
