create button--icon style

--- a/src/pages/song.html
+++ b/src/pages/song.html
@@ -67,18 +67,21 @@
           <button class="song__follow">دنبال کردن</button>
         </div>
 
-        <div class="song__actions">
-          <button class="song__add-to-playlist">
-            <svg>
-              <use xlink:href="../assets/image/sprite.svg#heart" />
-            </svg>
-          </button>
-          <button class="song__play">
-            <svg>
-              <use xlink:href="../assets/image/sprite.svg#play-button-arrowhead" />
-            </svg>
-        </div>
-        </button>
+          <div class="song__actions">
+            <button class="button--icon" data-label="افزودن به علاقه مندی ها">
+              <svg>
+                <use xlink:href="../assets/image/sprite.svg#heart" />
+              </svg>
+            </button>
+
+            <button class="button--icon" data-label="پخش">
+              <svg>
+                <use
+                  xlink:href="../assets/image/sprite.svg#play-button-arrowhead"
+                />
+              </svg>
+            </button>
+          </div>
       </section>
       <input type="radio" name="fieldset" id="suggestion">
       <label for="suggestion" class="song__options--suggestion">آهنگ های پیشنهادی</label>
