changing text in the page

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -71,10 +71,7 @@
         <h1>آهنگیفای</h1>
         <h2>سفری به سرزمین رویا</h2>
         <p>
-          یکی از مدیران اینتل با انتشار عکسی در توییتر به پهنای باند تاندربولت ۵
-          اشاره کرده است و بر همین اساس، به نظر می‌رسد این نسخه، پهنای باند ۸۰
-          گیگابیت بر ثانیه خواهند داشت. البته عکس مذکور بلافاصله پس از انتشار،
-          از صفحه توییتر برایانت حذف شد.
+          در این دنیای پر از سردرگمی ساعاتی در جادوی موسیقی غرق شویم از بندها رها شویم به خود بپردازیم باشد که رستگار شویم...
         </p>
 
         <div class="header__buttons">
@@ -88,7 +85,7 @@
       <section class="section">
         <h2 class="section__title">دنیایی از آهنگ ها</h2>
         <p class="section__text">
-          با آهنگیفای به دنیایی از آهنگ های جذاب دسترسی داشته باشید
+          خاص ترین ها را با ما تجربه کنید...
         </p>
         <svg class="section__image">
           <use xlink:href="../assets/image/sprite.svg#music" />
@@ -98,7 +95,7 @@
       <section class="section">
         <h2 class="section__title">آهنگ های خاطره انگیز</h2>
         <p class="section__text">
-          با آهنگیفای آهنگ های قدیمی و خاطره انگیز خود را دوباره گوش دهید
+          سفری به گذشته با آهنگ های کلاسیک و قدیمی...
         </p>
         <svg class="section__image">
           <use xlink:href="../assets/image/sprite.svg#gramophone" />
