--- a/src/pages/song.html
+++ b/src/pages/song.html
@@ -1,63 +1,73 @@
 <!DOCTYPE html>
 <html lang="en" dir="rtl">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>آهنگ | آهنگیفای</title>
+    <link rel="stylesheet" href="../style/css/main.css" />
+    <link rel="stylesheet" href="../style/css/song.css" />
+    <link rel="stylesheet" href="../style/css/components/nav.css" />
+    <link rel="stylesheet" href="../style/css/components/footer.css" />
+    <link rel="stylesheet" href="../style/css/components/button.css" />
+    <link rel="stylesheet" href="../style/css/components/audio.css" />
+    <link rel="icon" href="../assets/image/favicon.png" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>آهنگ | آهنگیفای</title>
-  <link rel="stylesheet" href="../style/css/main.css" />
-  <link rel="stylesheet" href="../style/css/song.css" />
-  <link rel="stylesheet" href="../style/css/components/nav.css" />
-  <link rel="stylesheet" href="../style/css/components/footer.css" />
-  <link rel="stylesheet" href="../style/css/components/button.css" />
-  <link rel="stylesheet" href="../style/css/components/audio.css">
-  <link rel="icon" href="../assets/image/favicon.png" />
-</head>
+  <body>
+    <nav class="nav">
+      <ul class="nav__link__box">
+        <li>
+          <a class="nav__link button--inline" href="./sign-up.html">ثبت نام</a>
+        </li>
+        <li>
+          <a class="nav__link button--inline" href="./login.html">ورود</a>
+        </li>
+        <li>
+          <a class="nav__link button--inline" href="./song-list.html"
+            >آهنگ ها</a
+          >
+        </li>
+        <li>
+          <a class="nav__link button--inline" href="./play-list"
+            >علاقه مندی ها</a
+          >
+        </li>
+      </ul>
 
-<body>
-  <nav class="nav">
-    <ul class="nav__link__box">
-      <li>
-        <a class="nav__link  button--inline" href="./sign-up.html">ثبت نام</a>
-      </li>
-      <li>
-        <a class="nav__link  button--inline" href="./login.html">ورود</a>
-      </li>
-      <li>
-        <a class="nav__link  button--inline" href="./song-list.html">آهنگ ها</a>
-      </li>
-      <li>
-        <a class="nav__link  button--inline" href="./play-list">علاقه مندی ها</a>
-      </li>
-    </ul>
+      <input type="checkbox" name="toggle-menu" id="toggle-menu" />
+      <label for="toggle-menu" class="nav__menu__toggle">
+        <div></div>
+      </label>
 
-    <input type="checkbox" name="toggle-menu" id="toggle-menu" />
-    <label for="toggle-menu" class="nav__menu__toggle">
-      <div></div>
-    </label>
+      <div class="nav__menu__background"></div>
+      <ul class="nav__menu">
+        <li>
+          <a class="nav__link button--inline" href="./sign-up.html">ثبت نام</a>
+        </li>
+        <li>
+          <a class="nav__link button--inline" href="./login.html">ورود</a>
+        </li>
+        <li>
+          <a class="nav__link button--inline" href="./song-list.html"
+            >آهنگ ها</a
+          >
+        </li>
+        <li>
+          <a class="nav__link button--inline" href="./play-list"
+            >علاقه مندی ها</a
+          >
+        </li>
+      </ul>
+    </nav>
 
-    <div class="nav__menu__background"></div>
-    <ul class="nav__menu">
-      <li>
-        <a class="nav__link button--inline" href="./sign-up.html">ثبت نام</a>
-      </li>
-      <li>
-        <a class="nav__link button--inline" href="./login.html">ورود</a>
-      </li>
-      <li>
-        <a class="nav__link button--inline" href="./song-list.html">آهنگ ها</a>
-      </li>
-      <li>
-        <a class="nav__link button--inline" href="./play-list">علاقه مندی ها</a>
-      </li>
-    </ul>
-  </nav>
-
-  <main>
-    <div class="song__container">
+    <main class="song__container">
       <section class="song__intro">
-        <img src="https://picsum.photos/200" alt="song cover image" class="song__image" />
+        <img
+          src="https://picsum.photos/200"
+          alt="song cover image"
+          class="song__image"
+        />
         <div class="song__info">
           <div>
             <h1 class="song__name">مرداب</h1>
@@ -67,44 +77,50 @@
           <button class="song__follow">دنبال کردن</button>
         </div>
 
-          <div class="song__actions">
-            <button class="button--icon" data-label="افزودن به علاقه مندی ها">
-              <svg>
-                <use xlink:href="../assets/image/sprite.svg#heart" />
-              </svg>
-            </button>
+        <div class="song__actions">
+          <button class="button--icon" data-label="افزودن به علاقه مندی ها">
+            <svg>
+              <use xlink:href="../assets/image/sprite.svg#heart" />
+            </svg>
+          </button>
 
-            <button class="button--icon" data-label="پخش">
-              <svg>
-                <use
-                  xlink:href="../assets/image/sprite.svg#play-button-arrowhead"
-                />
-              </svg>
-            </button>
-          </div>
+          <button class="button--icon" data-label="پخش">
+            <svg>
+              <use
+                xlink:href="../assets/image/sprite.svg#play-button-arrowhead"
+              />
+            </svg>
+          </button>
+        </div>
       </section>
-      <input type="radio" name="fieldset" id="suggestion">
-      <label for="suggestion" class="song__options--suggestion">آهنگ های پیشنهادی</label>
-      <input type="radio" name="fieldset" id="lyrics">
-      <label for="lyrics" class="song__options--lyrics">متن آهنگ</label>
-      <div class="line"></div>
-      <p class="song__lyrics">
-        میون یه دشت لخت زير خورشید کوير مونده یک مرداب پیر توی دست خاک اسیر
-        منم اون مرداب پیر از همه دنیا جدا داغ خورشید به تنم زنجیر زمین به پام
-        من همونم که یه روز می خواستم دريا بشم می خواستم بزرگترين دريای دنيا
-        بشم آرزو داشتم برم تا به دريا برسم شبو آتیش بزنم تا به فردا برسم اولش
-        چشمه بودم زير آسمون پیر اما از بخت سیاه راهم افتاد به کوير چشم من چشم
-        من به اونجا بود پشت اون کوه بلند اما دست سرنوشت سر رام یه چاله کند توی
-        چاله افتادم خاک منو زندونی کرد آسمونم نباريد اونم سر گرونی کرد حالا یه
-        مرداب شدم یه اسیر نیمه جون یه طرف میرم به خاک یه طرف به آسمون خورشید
-        از اون بالاها زمینم از این پایین هی بخارم می کنن زندگیم شده همین با
-        چشام مردنمو دارم اینجا میبینم سر نوشتم همینه من اسیر زمینم هیچی باقی
-        نیست ازم قطره های آخره خاك تشنه همینم داره همراش میبره خشک میشم تموم
-        میشم فردا که خورشید میاد شن جامو پر میکنه که میاره دست باد
-      </p>
-      <section class="song__suggestion">
-        <h1>آهنگ های پیشنهادی</h1>
 
+      <input type="radio" name="tab" id="lyrics" class="song__tab" checked />
+      <input type="radio" name="tab" id="suggestion" class="song__tab" />
+
+      <div class="song__tab__box">
+        <label for="lyrics" id="song__lyrics__label" class="song__tab__label">متن آهنگ</label>
+
+        <label for="suggestion" id="song__suggestion__label" class="song__tab__label">
+          آهنگ های پیشنهادی
+        </label>  
+      </div>
+
+      <p class='song__lyrics'>
+        میون یه دشت لخت زير خورشید کوير مونده یک مرداب پیر توی دست خاک اسیر منم
+        اون مرداب پیر از همه دنیا جدا داغ خورشید به تنم زنجیر زمین به پام من
+        همونم که یه روز می خواستم دريا بشم می خواستم بزرگترين دريای دنيا بشم
+        آرزو داشتم برم تا به دريا برسم شبو آتیش بزنم تا به فردا برسم اولش چشمه
+        بودم زير آسمون پیر اما از بخت سیاه راهم افتاد به کوير چشم من چشم من به
+        اونجا بود پشت اون کوه بلند اما دست سرنوشت سر رام یه چاله کند توی چاله
+        افتادم خاک منو زندونی کرد آسمونم نباريد اونم سر گرونی کرد حالا یه مرداب
+        شدم یه اسیر نیمه جون یه طرف میرم به خاک یه طرف به آسمون خورشید از اون
+        بالاها زمینم از این پایین هی بخارم می کنن زندگیم شده همین با چشام مردنمو
+        دارم اینجا میبینم سر نوشتم همینه من اسیر زمینم هیچی باقی نیست ازم قطره
+        های آخره خاك تشنه همینم داره همراش میبره خشک میشم تموم میشم فردا که
+        خورشید میاد شن جامو پر میکنه که میاره دست باد
+      </p>
+
+      <section class="song__suggestion">
         <ul class="song__suggestion__list">
           <li>
             <a href="./song.html?id=1" class="song__suggestion__item">
@@ -148,13 +164,15 @@
         <div class="audio__container">
           <div class="audio__volume">
             <button>
-              <input type="checkbox" id="audio__volume--mute">
+              <input type="checkbox" id="audio__volume--mute" />
               <label for="audio__volume--mute">
                 <svg>
                   <use xlink:href="../assets/image/sprite.svg#mute" />
                 </svg>
                 <svg>
-                  <use xlink:href="../assets/image/sprite.svg#speaker-filled-audio-tool" />
+                  <use
+                    xlink:href="../assets/image/sprite.svg#speaker-filled-audio-tool"
+                  />
                 </svg>
               </label>
             </button>
@@ -164,28 +182,36 @@
           </div>
           <div class="audio__actions">
             <button class="audio__actions--next">
-               <svg>
-                <use xlink:href="../assets/image/sprite.svg#fast-forward-arrowhead-symbol" />
+              <svg>
+                <use
+                  xlink:href="../assets/image/sprite.svg#fast-forward-arrowhead-symbol"
+                />
               </svg>
             </button>
-            <input type="checkbox" id="play_pause_switch">
+            <input type="checkbox" id="play_pause_switch" />
             <label for="play_pause_switch">
-                <svg>
-                  <use xlink:href="../assets/image/sprite.svg#play-button-arrowhead" />
-                </svg>
-                <svg>
-                  <use xlink:href="../assets/image/sprite.svg#music-pause-button-pair-of-lines" />
-                </svg>
+              <svg>
+                <use
+                  xlink:href="../assets/image/sprite.svg#play-button-arrowhead"
+                />
+              </svg>
+              <svg>
+                <use
+                  xlink:href="../assets/image/sprite.svg#music-pause-button-pair-of-lines"
+                />
+              </svg>
             </label>
             <button class="audio__actions--pervious">
               <svg>
-                <use xlink:href="../assets/image/sprite.svg#fast-forward-arrowhead-symbol-1" />
+                <use
+                  xlink:href="../assets/image/sprite.svg#fast-forward-arrowhead-symbol-1"
+                />
               </svg>
             </button>
           </div>
           <div class="audio__info">
-            <img src="https://picsum.photos/110" alt="cover song">
-            <input type="checkbox" id="checkbox-add-to-playlist">
+            <img src="https://picsum.photos/110" alt="cover song" />
+            <input type="checkbox" id="checkbox-add-to-playlist" />
             <label for="checkbox-add-to-playlist">
               <svg>
                 <use xlink:href="../assets/image/sprite.svg#heart" />
@@ -197,44 +223,63 @@
           <span></span>
         </div>
       </div>
-    </div>
-  </main>
+    </main>
 
-  <footer class="footer">
-    <div class="footer__social">
-      <a href="http://youtube.com">
-        <svg fill="#fff" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50" width="50px" height="50px">
-          <path
-            d="M 44.898438 14.5 C 44.5 12.300781 42.601563 10.699219 40.398438 10.199219 C 37.101563 9.5 31 9 24.398438 9 C 17.800781 9 11.601563 9.5 8.300781 10.199219 C 6.101563 10.699219 4.199219 12.199219 3.800781 14.5 C 3.398438 17 3 20.5 3 25 C 3 29.5 3.398438 33 3.898438 35.5 C 4.300781 37.699219 6.199219 39.300781 8.398438 39.800781 C 11.898438 40.5 17.898438 41 24.5 41 C 31.101563 41 37.101563 40.5 40.601563 39.800781 C 42.800781 39.300781 44.699219 37.800781 45.101563 35.5 C 45.5 33 46 29.398438 46.101563 25 C 45.898438 20.5 45.398438 17 44.898438 14.5 Z M 19 32 L 19 18 L 31.199219 25 Z" />
-        </svg>
+    <footer class="footer">
+      <div class="footer__social">
+        <a href="http://youtube.com">
+          <svg
+            fill="#fff"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 50 50"
+            width="50px"
+            height="50px"
+          >
+            <path
+              d="M 44.898438 14.5 C 44.5 12.300781 42.601563 10.699219 40.398438 10.199219 C 37.101563 9.5 31 9 24.398438 9 C 17.800781 9 11.601563 9.5 8.300781 10.199219 C 6.101563 10.699219 4.199219 12.199219 3.800781 14.5 C 3.398438 17 3 20.5 3 25 C 3 29.5 3.398438 33 3.898438 35.5 C 4.300781 37.699219 6.199219 39.300781 8.398438 39.800781 C 11.898438 40.5 17.898438 41 24.5 41 C 31.101563 41 37.101563 40.5 40.601563 39.800781 C 42.800781 39.300781 44.699219 37.800781 45.101563 35.5 C 45.5 33 46 29.398438 46.101563 25 C 45.898438 20.5 45.398438 17 44.898438 14.5 Z M 19 32 L 19 18 L 31.199219 25 Z"
+            />
+          </svg>
+        </a>
+
+        <a href="http://instagram.com">
+          <svg
+            fill="#fff"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 50 50"
+            width="50px"
+            height="50px"
+          >
+            <path
+              d="M 16 3 C 8.83 3 3 8.83 3 16 L 3 34 C 3 41.17 8.83 47 16 47 L 34 47 C 41.17 47 47 41.17 47 34 L 47 16 C 47 8.83 41.17 3 34 3 L 16 3 z M 37 11 C 38.1 11 39 11.9 39 13 C 39 14.1 38.1 15 37 15 C 35.9 15 35 14.1 35 13 C 35 11.9 35.9 11 37 11 z M 25 14 C 31.07 14 36 18.93 36 25 C 36 31.07 31.07 36 25 36 C 18.93 36 14 31.07 14 25 C 14 18.93 18.93 14 25 14 z M 25 16 C 20.04 16 16 20.04 16 25 C 16 29.96 20.04 34 25 34 C 29.96 34 34 29.96 34 25 C 34 20.04 29.96 16 25 16 z"
+            />
+          </svg>
+        </a>
+
+        <a href="http://facebook.com">
+          <svg
+            fill="#fff"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 50 50"
+            width="50px"
+            height="50px"
+          >
+            <path
+              d="M41,4H9C6.24,4,4,6.24,4,9v32c0,2.76,2.24,5,5,5h32c2.76,0,5-2.24,5-5V9C46,6.24,43.76,4,41,4z M37,19h-2c-2.14,0-3,0.5-3,2 v3h5l-1,5h-4v15h-5V29h-4v-5h4v-3c0-4,2-7,6-7c2.9,0,4,1,4,1V19z"
+            />
+          </svg>
+        </a>
+      </div>
+
+      <div class="footer__link">
+        <a class="button--inline" href="./sign-up.html">ثبت نام</a>
+        <a class="button--inline" href="./login.html">ورود</a>
+        <a class="button--inline" href="./song-list.html">آهنگ ها</a>
+        <a class="button--inline" href="./play-list.html">علاقه مندی ها</a>
+      </div>
+
+      <a href="./">
+        <img src="../assets/image/favicon.png" alt="" loading="lazy" />
       </a>
-
-      <a href="http://instagram.com">
-        <svg fill="#fff" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50" width="50px" height="50px">
-          <path
-            d="M 16 3 C 8.83 3 3 8.83 3 16 L 3 34 C 3 41.17 8.83 47 16 47 L 34 47 C 41.17 47 47 41.17 47 34 L 47 16 C 47 8.83 41.17 3 34 3 L 16 3 z M 37 11 C 38.1 11 39 11.9 39 13 C 39 14.1 38.1 15 37 15 C 35.9 15 35 14.1 35 13 C 35 11.9 35.9 11 37 11 z M 25 14 C 31.07 14 36 18.93 36 25 C 36 31.07 31.07 36 25 36 C 18.93 36 14 31.07 14 25 C 14 18.93 18.93 14 25 14 z M 25 16 C 20.04 16 16 20.04 16 25 C 16 29.96 20.04 34 25 34 C 29.96 34 34 29.96 34 25 C 34 20.04 29.96 16 25 16 z" />
-        </svg>
-      </a>
-
-      <a href="http://facebook.com">
-        <svg fill="#fff" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50" width="50px" height="50px">
-          <path
-            d="M41,4H9C6.24,4,4,6.24,4,9v32c0,2.76,2.24,5,5,5h32c2.76,0,5-2.24,5-5V9C46,6.24,43.76,4,41,4z M37,19h-2c-2.14,0-3,0.5-3,2 v3h5l-1,5h-4v15h-5V29h-4v-5h4v-3c0-4,2-7,6-7c2.9,0,4,1,4,1V19z" />
-        </svg>
-      </a>
-    </div>
-
-    <div class="footer__link">
-      <a class="button--inline" href="./sign-up.html">ثبت نام</a>
-      <a class="button--inline" href="./login.html">ورود</a>
-      <a class="button--inline" href="./song-list.html">آهنگ ها</a>
-      <a class="button--inline" href="./play-list.html">علاقه مندی ها</a>
-    </div>
-
-    <a href="./">
-      <img src="../assets/image/favicon.png" alt="" loading="lazy" />
-    </a>
-  </footer>
-</body>
-
+    </footer>
+  </body>
 </html>
