adding play-list

--- a/src/pages/play-list.html
+++ b/src/pages/play-list.html
@@ -4,15 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>دنیای خیال | آهنگیفای</title>
     <link rel="stylesheet" href="../style/css/main.css" />
-    <link rel="stylesheet" href="../style/css/landing.css" />
     <link rel="stylesheet" href="../style/css/components/nav.css" />
-    <link rel="stylesheet" href="../style/css/components/header.css" />
     <link rel="stylesheet" href="../style/css/components/footer.css" />
-    <link rel="stylesheet" href="../style/css/components/button.css" />
+    <link rel="stylesheet" href="../style/css/play-list.css" />
     <link rel="icon" href="../assets/image/favicon.png" />
+    <title>علاقه مندی هام |‌ آهنگیفای</title>
   </head>
+
   <body>
     <header class="header">
       <nav class="nav">
@@ -31,7 +30,7 @@
             </a>
           </li>
           <li>
-            <a class="nav__link button--inline" href="./play-list.html">
+            <a class="nav__link button--inline" href="./play-list">
               علاقه مندی ها
             </a>
           </li>
@@ -58,45 +57,102 @@
             </a>
           </li>
           <li>
-            <a class="nav__link button--inline" href="./play-list.html">
+            <a class="nav__link button--inline" href="./play-list">
               علاقه مندی ها
             </a>
           </li>
         </ul>
       </nav>
-
-      <div class="header__background"></div>
-
-      <div class="header__title">
-        <h1>آهنگیفای</h1>
-        <h2>سفری به سرزمین رویا</h2>
-        <p>
-          در این دنیای پر از سردرگمی ساعاتی در جادوی موسیقی غرق شویم از بندها
-          رها شویم به خود بپردازیم باشد که رستگار شویم...
-        </p>
-
-        <div class="header__buttons">
-          <a href="./login.html" class="button--outline">ورود</a>
-          <a href="./sign-up.html" class="button">ثبت نام</a>
-        </div>
-      </div>
     </header>
 
     <main>
-      <section class="section">
-        <h2 class="section__title">دنیایی از آهنگ ها</h2>
-        <p class="section__text">خاص ترین ها را با ما تجربه کنید...</p>
-        <svg class="section__image">
-          <use xlink:href="../assets/image/sprite.svg#music" />
-        </svg>
+      <h2 class="suggestion__h2">پیشنهاد ما</h2>
+      <section class="suggestion__songs">
+        <a href="song.html?id=1">
+          <img src="https://picsum.photos/150" alt="" />
+        </a>
+        <a href="song.html?id=2">
+          <img src="https://picsum.photos/151" alt="" />
+        </a>
+        <a href="song.html?id=3">
+          <img src="https://picsum.photos/153" alt="" />
+        </a>
+        <a href="song.html?id=4">
+          <img src="https://picsum.photos/154" alt="" />
+        </a>
+        <a href="song.html?id=5">
+          <img src="https://picsum.photos/155" alt="" />
+        </a>
+        <a href="song.html?id=6">
+          <img src="https://picsum.photos/156" alt="" />
+        </a>
+        <a href="song.html?id=7">
+          <img src="https://picsum.photos/157" alt="" />
+        </a>
+        <a href="song.html?id=8">
+          <img src="https://picsum.photos/158" alt="" />
+        </a>
+        <a href="song.html?id=9">
+          <img src="https://picsum.photos/159" alt="" />
+        </a>
+        <a href="song.html?id=10">
+          <img src="https://picsum.photos/160" alt="" />
+        </a>
       </section>
-
-      <section class="section">
-        <h2 class="section__title">آهنگ های خاطره انگیز</h2>
-        <p class="section__text">سفری به گذشته با آهنگ های کلاسیک و قدیمی...</p>
-        <svg class="section__image">
-          <use xlink:href="../assets/image/sprite.svg#gramophone" />
-        </svg>
+      <section class="list__song">
+        <h2>آهنگ هام</h2>
+        <ul>
+          <li>
+            <a href="./song.html?id=1" class="list__song__item">
+              <div>
+                <span>1</span>
+                <img src="https://picsum.photos/100" alt="song 1" />
+              </div>
+              <h3>محراب</h3>
+              <div>3:51</div>
+            </a>
+          </li>
+          <li>
+            <a href="./song.html?id=2" class="list__song__item">
+              <div>
+                <span>2</span>
+                <img src="https://picsum.photos/101" alt="song 2" />
+              </div>
+              <h3>شب یلدا</h3>
+              <div>4:45</div>
+            </a>
+          </li>
+          <li>
+            <a href="./song.html?id=3" class="list__song__item">
+              <div>
+                <span>3</span>
+                <img src="https://picsum.photos/102" alt="song 3" />
+              </div>
+              <h3>به اصفهان رو</h3>
+              <div>5:06</div>
+            </a>
+          </li>
+          <li>
+            <a href="./song.html?id=4" class="list__song__item">
+              <div>
+                <span>4</span>
+                <img src="https://picsum.photos/103" alt="song 4" />
+              </div>
+              <h3>بی قرار</h3>
+              <div>7:32</div>
+            </a>
+          </li>
+          <li>
+            <a href="./song.html?id=5" class="list__song__item">
+              <div>
+                <span>5</span>
+                <img src="https://picsum.photos/104" alt="song 5" />
+              </div>
+              <h3>ابد ولله ما ننسی حسینا</h3>
+              <div>4:12</div>
+            </a>
+          </li>
+        </ul>
       </section>
     </main>
 
