fix play-list link fix play list button style

--- a/src/pages/play-list.html
+++ b/src/pages/play-list.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../style/css/main.css" />
+    <link rel="stylesheet" href="../style/css/play-list.css" />
+    <link rel="stylesheet" href="../style/css/components/button.css" />
     <link rel="stylesheet" href="../style/css/components/nav.css" />
     <link rel="stylesheet" href="../style/css/components/footer.css" />
-    <link rel="stylesheet" href="../style/css/play-list.css" />
     <link rel="icon" href="../assets/image/favicon.png" />
     <title>علاقه مندی هام |‌ آهنگیفای</title>
   </head>
@@ -30,7 +31,7 @@
             </a>
           </li>
           <li>
-            <a class="nav__link button--inline" href="./play-list">
+            <a class="nav__link button--inline" href="./play-list.html">
               علاقه مندی ها
             </a>
           </li>
@@ -57,7 +58,7 @@
             </a>
           </li>
           <li>
-            <a class="nav__link button--inline" href="./play-list">
+            <a class="nav__link button--inline" href="./play-list.html">
               علاقه مندی ها
             </a>
           </li>
