--- a/src/pages/song.html
+++ b/src/pages/song.html
@@ -29,7 +29,7 @@
           >
         </li>
         <li>
-          <a class="nav__link button--inline" href="./play-list"
+          <a class="nav__link button--inline" href="./play-list.html"
             >علاقه مندی ها</a
           >
         </li>
@@ -54,7 +54,7 @@
           >
         </li>
         <li>
-          <a class="nav__link button--inline" href="./play-list"
+          <a class="nav__link button--inline" href="./play-list.html"
             >علاقه مندی ها</a
           >
         </li>
