improve lyrics style

--- a/src/pages/song.html
+++ b/src/pages/song.html
@@ -111,20 +111,57 @@
         </label>
       </div>
 
-      <p class="song__lyrics">
-        میون یه دشت لخت زير خورشید کوير مونده یک مرداب پیر توی دست خاک اسیر منم
-        اون مرداب پیر از همه دنیا جدا داغ خورشید به تنم زنجیر زمین به پام من
-        همونم که یه روز می خواستم دريا بشم می خواستم بزرگترين دريای دنيا بشم
-        آرزو داشتم برم تا به دريا برسم شبو آتیش بزنم تا به فردا برسم اولش چشمه
-        بودم زير آسمون پیر اما از بخت سیاه راهم افتاد به کوير چشم من چشم من به
-        اونجا بود پشت اون کوه بلند اما دست سرنوشت سر رام یه چاله کند توی چاله
-        افتادم خاک منو زندونی کرد آسمونم نباريد اونم سر گرونی کرد حالا یه مرداب
-        شدم یه اسیر نیمه جون یه طرف میرم به خاک یه طرف به آسمون خورشید از اون
-        بالاها زمینم از این پایین هی بخارم می کنن زندگیم شده همین با چشام مردنمو
-        دارم اینجا میبینم سر نوشتم همینه من اسیر زمینم هیچی باقی نیست ازم قطره
-        های آخره خاك تشنه همینم داره همراش میبره خشک میشم تموم میشم فردا که
-        خورشید میاد شن جامو پر میکنه که میاره دست باد
-      </p>
+      <ul class="song__lyrics">
+        <li>میون یه دشت لخت</li>
+        <li>زير خورشید کوير</li>
+        <li>مونده یک مرداب پیر</li>
+        <li>توی دست خاک اسیر</li>
+        <li>منم اون مرداب پیر</li>
+        <li>از همه دنیا جدا</li>
+        <li>داغ خورشید به تنم</li>
+        <li>زنجیر زمین به پام</li>
+        <li>من همونم که یه روز</li>
+        <li>می خواستم دريا بشم</li>
+        <li>می خواستم بزرگترين</li>
+        <li>دريای دنيا بشم</li>
+        <li>آرزو داشتم برم</li>
+        <li>تا به دريا برسم</li>
+        <li>شبو آتیش بزنم</li>
+        <li>تا به فردا برسم</li>
+        <li>اولش چشمه بودم</li>
+        <li>زير آسمون پیر</li>
+        <li>اما از بخت سیاه</li>
+        <li>راهم افتاد به کوير</li>
+        <li>چشم من</li>
+        <li>چشم من به اونجا بود</li>
+        <li>پشت اون کوه بلند</li>
+        <li>اما دست سرنوشت</li>
+        <li>سر رام یه چاله کند</li>
+        <li>توی چاله افتادم</li>
+        <li>خاک منو زندونی کرد</li>
+        <li>آسمونم نباريد</li>
+        <li>اونم سر گرونی کرد</li>
+        <li>حالا یه مرداب شدم</li>
+        <li>یه اسیر نیمه جون</li>
+        <li>یه طرف میرم به خاک</li>
+        <li>یه طرف به آسمون</li>
+        <li>خورشید از اون بالاها</li>
+        <li>زمینم از این پایین</li>
+        <li>هی بخارم می کنن</li>
+        <li>زندگیم شده همین</li>
+        <li>با چشام مردنمو</li>
+        <li>دارم اینجا میبینم</li>
+        <li>سر نوشتم همینه</li>
+        <li>من اسیر زمینم</li>
+        <li>هیچی باقی نیست ازم</li>
+        <li>قطره های آخره</li>
+        <li>خاك تشنه همینم</li>
+        <li>داره همراش میبره</li>
+        <li>خشک میشم تموم میشم</li>
+        <li>فردا که خورشید میاد</li>
+        <li>شن جامو پر میکنه</li>
+        <li>که میاره دست باد</li>
+      </ul>
 
       <section class="song__suggestion">
         <ul class="song__suggestion__list">
