--- a/src/pages/song.html
+++ b/src/pages/song.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../style/css/components/nav.css" />
     <link rel="stylesheet" href="../style/css/components/footer.css" />
     <link rel="stylesheet" href="../style/css/components/button.css" />
+    <link rel="stylesheet" href="../style/css/components/song-item.css" />
     <link rel="stylesheet" href="../style/css/components/audio.css" />
     <link rel="icon" href="../assets/image/favicon.png" />
   </head>
@@ -164,40 +165,75 @@
       </ul>
 
       <section class="song__suggestion">
-        <ul class="song__suggestion__list">
+        <ul class="song__item__list">
           <li>
-            <a href="./song.html?id=1" class="song__suggestion__item">
-              <img src="https://picsum.photos/100" alt="song 1" />
-              <h3>محراب</h3>
-              <div>3:51</div>
+            <a href="./song.html?id=1" class="song__item">
+              <img
+                class="song__item__image"
+                src="https://picsum.photos/100"
+                alt="song 1"
+              />
+              <div>
+                <h3 class="song__item__name">محراب</h3>
+                <div class="song__item__singer">محمد اصفهانی</div>
+              </div>
+              <div class="song__item__duration">3:51</div>
             </a>
           </li>
           <li>
-            <a href="./song.html?id=2" class="song__suggestion__item">
-              <img src="https://picsum.photos/101" alt="song 2" />
-              <h3>شب یلدا</h3>
-              <div>4:45</div>
+            <a href="./song.html?id=2" class="song__item">
+              <img
+                class="song__item__image"
+                src="https://picsum.photos/101"
+                alt="song 2"
+              />
+              <div>
+                <h3 class="song__item__name">شب یلدا</h3>
+                <div class="song__item__singer">محمد اصفهانی</div>
+              </div>
+              <div class="song__item__duration">4:45</div>
             </a>
           </li>
           <li>
-            <a href="./song.html?id=3" class="song__suggestion__item">
-              <img src="https://picsum.photos/102" alt="song 3" />
-              <h3>به اصفهان رو</h3>
-              <div>5:06</div>
+            <a href="./song.html?id=3" class="song__item">
+              <img
+                class="song__item__image"
+                src="https://picsum.photos/102"
+                alt="song 3"
+              />
+              <div>
+                <h3 class="song__item__name">به اصفهان رو</h3>
+                <div class="song__item__singer">محمد اصفهانی</div>
+              </div>
+              <div class="song__item__duration">5:06</div>
             </a>
           </li>
           <li>
-            <a href="./song.html?id=4" class="song__suggestion__item">
-              <img src="https://picsum.photos/103" alt="song 4" />
-              <h3>بی قرار</h3>
-              <div>7:32</div>
+            <a href="./song.html?id=4" class="song__item">
+              <img
+                class="song__item__image"
+                src="https://picsum.photos/103"
+                alt="song 4"
+              />
+              <div>
+                <h3 class="song__item__name">بی قرار</h3>
+                <div class="song__item__singer">محمد اصفهانی</div>
+              </div>
+              <div class="song__item__duration">7:32</div>
             </a>
           </li>
           <li>
-            <a href="./song.html?id=5" class="song__suggestion__item">
-              <img src="https://picsum.photos/104" alt="song 5" />
-              <h3>ابد ولله ما ننسی حسینا</h3>
-              <div>4:12</div>
+            <a href="./song.html?id=5" class="song__item">
+              <img
+                class="song__item__image"
+                src="https://picsum.photos/104"
+                alt="song 5"
+              />
+              <div>
+                <h3 class="song__item__name">ابد ولله ما ننسی حسینا</h3>
+                <div class="song__item__singer">محمد اصفهانی</div>
+              </div>
+              <div class="song__item__duration">4:12</div>
             </a>
           </li>
         </ul>
