--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../style/css/form.css"></link>
     <link rel="stylesheet" href="../style/css/components/button.css"></link>
     <link rel="icon" href="../assets/image/logo-ahangify.png">
+    <script src="../script/form.js" defer></script>
   </head>
   <body>
     <main class="form__box">
